# pai-note-exporter

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/codeql/: config.yml
.github/workflows/: ci.yml  dependency-updates.yml  docs.yml  multi-platform.yml  performance.yml  quality-gates.yml  release.yml  stale-management.yml
docs/: api.md  architecture.md  cli-usage.md  configuration.md  examples.md  index.md  installation.md  python-api.md  quick-start.md  troubleshooting.md
examples/: README.md  advanced_usage.py  basic_usage.py
scripts/: README.md  prepare_release.sh  setup_dev.sh
src/pai_note_exporter/: __init__.py  audio_processor.py  cli.py  config.py  exceptions.py  export.py  logger.py  login.py  rate_limiter.py  summary_tracker.py  text_processor.py
tests/: __init__.py  test_benchmarks.py  test_config.py  test_exceptions.py  test_logger.py  test_login.py
